--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Sing Along Party</title>
+    <title>Sing Along with the Light Rakes</title>
 </head>
 <body>
     <h1>Sing Along with the Light Rakes</h1>
