--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li><a href="wagonwheel.html">WAGON WHEEL – DYLAN/OLD CROW MEDICINE SHOW – 73’/’98</a></li>
         <li><a href="mrbrightside.html">MR. BRIGHTSIDE – THE KILLERS – 2004</a></li>
         <li><a href="withoutlove.html">WITHOUT LOVE – HAIRSPRAY – 2007</a></li>
+        <li><a href="partyintheusa.html">PARTY IN THE U.S.A. – MILEY CYRUS – 2009</a></li>
         <li><a href="sundaycandy.html">SUNDAY CANDY – CHANCE THE RAPPER – 2015</a></li>
         <li><a href="donttakethemoney.html">DON’T TAKE THE MONEY – BLEACHERS – 2017</a></li>
         <!-- Repeat for all songs -->
